Verbindung mit Frontend - Meilenstein 2